Add footnotes handling and eigenvalue contents

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,4 +26,6 @@
     });
 </script>
 {% endif %}
+<link rel="stylesheet" href="/footnotes.css">
+<script src="/fix-footnotes.js"></script>
 {% endblock user_head %}
